--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "guzzlehttp/guzzle": "^6.2",
-        "illuminate/notifications": "^5.3",
-        "illuminate/support": "^5.1|^5.2|^5.3"
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "4.*",
+        "illuminate/notifications": "^5.3",
+        "illuminate/support": "^5.1|^5.2|^5.3"
     },
     "autoload": {
         "psr-4": {
