--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "mockery/mockery": "^0.9.5",
         "phpunit/phpunit": "4.*",
         "illuminate/notifications": "^5.3",
-        "illuminate/support": "^5.1|^5.2|^5.3|^5.4|^5.5|^5.6|^5.7"
+        "illuminate/support": "^5.1|^5.2|^5.3|^5.4|^5.5|^5.6|^5.7|^5.8|^6.0"
     },
     "autoload": {
         "psr-4": {
